# llm-github-models

./: .gitignore  README.md  llm_github_models.py  parse_models_json.py  pyproject.toml
.github/workflows/: python-ci.yml
tests/: test_llm_github_models.py
tools/: models.md  parse_models_json.py
